--- a/.env
+++ b/.env
@@ -11,4 +11,6 @@ REACT_APP_SASS_VARIABLES_PATH=src/_metronic/assets/sass/core/components/_variabl
 # REACT_APP_PREVIEW_URL=https://preview.keenthemes.com/metronic8/react/demo1/
 # REACT_APP_PREVIEW_REACT_URL=https://preview.keenthemes.com/metronic8/react
 # REACT_APP_PREVIEW_DOCS_URL=https://preview.keenthemes.com/metronic8/react/demo1-docs
-REACT_APP_THEME_API_URL=
+>
+REACT_APP_API_URL=http://localhost:8000/api
+REACT_APP_THEME_API_URL=http://localhost:8000/api
