--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@manaflair/redux-batch": "^1.0.0",
     "@popperjs/core": "~2.10.1",
     "@reduxjs/toolkit": "^1.6.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.27.1",
     "axios": "^0.21.1",
